筛选项全部的修改

--- a/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
+++ b/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
@@ -10,12 +10,66 @@
 		<view class="flex aic">
 			<l-input class="w90" bind:lininput="changeParams" value="{{keyword}}" placeholder="检验单号/订单号"
 				hide-label="{{true}}" />
-				<view class="w20 color6 flex aic" bindtap="openPopup">
-					<view>筛选</view>
-					<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
-				</view>
+			<view class="w20 color6 flex aic" bindtap="openPopup">
+				<view>筛选</view>
+				<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
+			</view>
 		</view>
-
+		<view wx:if="{{showPopup}}">
+			<view style="background-color: rgba(0, 0, 0, 0.5); top: 19vh; bottom: 0; left: 0; right: 0; z-index: 98;"
+				class="pof vh100" bindtap='closePopup'>
+			</view>
+			<view class="vh60 pof bgColorWhite" style="z-index: 99;left:0 ;right: 0">
+				<mp-vtabs vtabs="{{vtabs}}" activeTab="{{activeTab}}" tabActiveTextColor="#27A2fd" tabLineColor="#27A2fd">
+					<mp-vtabs-content tabIndex="{{0}}">
+						<view class="vtabtitle">创建人</view>
+						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="user">
+							<label class="radio" wx:for="{{userList}}" wx:key="key">
+								<view>
+									<view class="label">{{item.text}}</view>
+									<radio value="{{index}}" checked="{{item.checked}}" />
+								</view>
+							</label>
+						</radio-group>
+					</mp-vtabs-content>
+					<mp-vtabs-content tabIndex="{{1}}">
+						<view class="vtabtitle">审核状态</view>
+						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="status">
+							<label class="radio" wx:for="{{statusList}}" wx:key="key">
+								<view>
+									<view class="label">{{item.text}}</view>
+									<radio value="{{index}}" checked="{{item.checked}}" />
+								</view>
+							</label>
+						</radio-group>
+					</mp-vtabs-content>
+					<mp-vtabs-content tabIndex="{{2}}">
+						<view class="vtabtitle">创建时间</view>
+						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="date">
+							<label class="radio" wx:for="{{dateList}}" wx:key="key">
+								<view>
+									<view class="label">{{item.text}}</view>
+									<radio value="{{index}}" checked="{{item.checked}}" />
+								</view>
+							</label>
+						</radio-group>
+					</mp-vtabs-content>
+				</mp-vtabs>
+				<view class="flex jcsa bgColorWhite pt10">
+					<view class="resetHalf">
+						<van-button type="primary" size="small" bindtap="getScreenList">重置</van-button>
+					</view>
+					<view class="confirmHalf">
+						<van-button type="primary" size="small" bindtap="confirmData">确认</van-button>
+					</view>
+				</view>
+			</view>
+		</view>
+		<view class="flex jcsb fz25" style="height: 48px;border-bottom: 1px solid #eaeaea;">
+			<view class="w100 h100 flex aic jcc" bindtap="openPicker" data-type="client">{{client_name || '检验单位'}}
+				<van-icon class="ml5 pt5" name="arrow-down" />
+			</view>
+		</view>
 		<view class="flex jcsb" style="padding: 10px;">
 			<view class="w25">
 				<view>检验数</view>
@@ -38,7 +92,7 @@
 		</view>
 	</view>
 
-	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
+	<scroll-view scroll-y class="vh65" bindscrolltolower="reqOrder">
 		<view style="content: ''; overflow: hidden;"></view>
 		<view wx:for="{{list}}" class="card flex" bindtap="toDetail" data-item="{{item}}">
 			<view class="w100 flex aic">
@@ -86,80 +140,9 @@
 	</scroll-view>
 
 	<l-message content="{{content}}" />
-	<van-popup show="{{ showPopupSon }}" bind:close="closePopupSon" bind:click-overlay="closePopupSon" position="right">
-		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
-			<view class="vh12"></view>
-			<scroll-view>
-				<view class="mt20" wx:for="{{clientList}}">
-					<view class="mb20 bold">{{item.text}}</view>
-					<van-collapse value="{{ activeName }}" bind:change="changeCollapse">
-						<van-collapse-item wx:for="{{item.children}}" wx:for-item="secondClient" title="{{secondClient.text}}"
-							name="{{secondClient.id}}">
-							<view class="flex flexWarp">
-								<van-button class="ml10 mt10" wx:for="{{secondClient.children}}" wx:for-item="thirdClient"
-									bind:click="checkClient" data-item="{{thirdClient}}">
-									{{thirdClient.text}}
-								</van-button>
-							</view>
-							<view class="tc" wx:if="{{secondClient.children.length === 0}}">暂无数据</view>
-						</van-collapse-item>
-					</van-collapse>
-				</view>
-				<view class="vh8"></view>
-			</scroll-view>
-		</view>
-	</van-popup>
-	<van-popup show="{{ showPopup }}" bind:close="closePopup" bind:click-overlay="closePopup" position="right">
-		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
-			<view class="vh12"></view>
-			<scroll-view>
-				<van-cell title="检验单位" is-link border="{{false}}" bind:click="openPopupSon" value="{{client_name || '请选择'}}" />
-				<view class="line"></view>
-				<view>创建人：</view>
-				<view class="flex">
-					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="user">
-						<label class="radio" wx:for="{{userList}}" wx:key="key">
-							<view>
-								<view class="label">{{item.text}}</view>
-								<radio value="{{index}}" checked="{{item.checked}}" />
-							</view>
-						</label>
-					</radio-group>
-				</view>
-				<view class="line"></view>
-				<view>审核状态：</view>
-				<view class="flex">
-					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="status">
-						<label class="radio" wx:for="{{statusList}}" wx:key="key">
-							<view>
-								<view class="label">{{item.text}}</view>
-								<radio value="{{index}}" checked="{{item.checked}}" />
-							</view>
-						</label>
-					</radio-group>
-				</view>
-				<view class="line"></view>
-				<view>创建时间：</view>
-				<view class="flex">
-					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="date">
-						<label class="radio" wx:for="{{dateList}}" wx:key="key">
-							<view>
-								<view class="label">{{item.text}}</view>
-								<radio value="{{index}}" checked="{{item.checked}}" />
-							</view>
-						</label>
-					</radio-group>
-				</view>
-				<view class="vh8"></view>
-			</scroll-view>
-			<view class="submit" style="position: sticky;bottom:5%;left:50%;z-index: 2;">
-				<view class="flex jcsa">
-					<van-button type="primary" size="small" bindtap="getScreenList">重置</van-button>
-					<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="confirmData">确认</van-button>
-				</view>
-			</view>
-		</view>
-	</van-popup>
+
+	<picker values="{{clientList}}" level="3" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="client"
+		showDialog="{{showClient}}"></picker>
 
 	<movable-area class="movable-area">
 		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
