--- a/pages/billingManagement/ourInvoiceList/ourInvoiceList.wxml
+++ b/pages/billingManagement/ourInvoiceList/ourInvoiceList.wxml
@@ -7,16 +7,20 @@
 	</nav-content>
 
 	<view class="bgColorWhite">
-		<l-input bind:lininput="changeParams" data-type="code" value="{{code}}" placeholder="票据编号" hide-label="{{true}}" />
 		<view class="flex aic">
-			<l-input class="w80" bind:lininput="changeParams" data-type="order_code" value="{{order_code}}" placeholder="订单号"
+			<l-input class='w50' bind:lininput="changeParams" data-type="code" value="{{code}}" placeholder="票据编号"
 				hide-label="{{true}}" />
-				<view class="w20 color6 flex aic" bindtap="openPopup">
-					<view>筛选</view>
-					<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
-				</view>
+			<l-input class="w50" bind:lininput="changeParams" data-type="order_code" value="{{order_code}}" placeholder="订单号"
+				hide-label="{{true}}" />
 		</view>
-
+		<view class="flex jcsb fz25 bgColorWhite" style="height: 48px;border-bottom: 1px solid #eaeaea;">
+			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="client">{{client_name || '关联客户'}}
+				<van-icon class="ml5 pt5" name="arrow-down" />
+			</view>
+			<view class="w50 h100 flex aic jcc" bindtap="openPicker" data-type="date">{{dateName || '创建时间'}}
+				<van-icon class="ml5 pt5" name="arrow-down" />
+			</view>
+		</view>
 		<view class="flex jcsb" style="padding: 10px;">
 			<view>开票金额</view>
 			<view class="color03d0 bold">{{additional.total_price || 0}} 万元</view>
@@ -70,56 +74,11 @@
 	</scroll-view>
 
 	<l-message content="{{content}}" />
-	<van-popup show="{{ showPopupSon }}" bind:close="closePopupSon" bind:click-overlay="closePopupSon" position="right">
-		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
-			<view class="vh12"></view>
-			<scroll-view>
-				<view class="mt20" wx:for="{{clientList}}">
-					<view class="mb20 bold">{{item.text}}</view>
-					<van-collapse value="{{ activeName }}" bind:change="changeCollapse">
-						<van-collapse-item wx:for="{{item.children}}" wx:for-item="secondClient" title="{{secondClient.text}}"
-							name="{{secondClient.id}}">
-							<view class="flex flexWarp">
-								<van-button class="mt10 ml10" wx:for="{{secondClient.children}}" wx:for-item="thirdClient"
-									bind:click="checkClient" data-item="{{thirdClient}}">
-									{{thirdClient.text}}
-								</van-button>
-							</view>
-							<view class="tc" wx:if="{{secondClient.children.length === 0}}">暂无数据</view>
-						</van-collapse-item>
-					</van-collapse>
-				</view>
-				<view class="vh8"></view>
-			</scroll-view>
-		</view>
-	</van-popup>
-	<van-popup show="{{ showPopup }}" bind:close="closePopup" bind:click-overlay="closePopup" position="right">
-		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
-			<view class="vh12"></view>
-			<scroll-view>
-				<van-cell title="关联客户" is-link border="{{false}}" bind:click="openPopupSon" value="{{client_name || '请选择'}}" />
-				<view class="line"></view>
-				<view>创建时间：</view>
-				<view class="flex">
-					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="date">
-						<label class="radio" wx:for="{{dateList}}" wx:key="key">
-							<view>
-								<view class="label">{{item.text}}</view>
-								<radio value="{{index}}" checked="{{item.checked}}" />
-							</view>
-						</label>
-					</radio-group>
-				</view>
-				<view class="vh8"></view>
-			</scroll-view>
-			<view class="submit" style="position: sticky;bottom:5%;left:50%;z-index: 2;">
-				<view class="flex jcsa">
-					<van-button type="primary" size="small" bindtap="getScreenList">重置</van-button>
-					<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="confirmData">确认</van-button>
-				</view>
-			</view>
-		</view>
-	</van-popup>
+
+	<picker values="{{clientList}}" level="3" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="client"
+		showDialog="{{showClient}}"></picker>
+	<picker values="{{dateList}}" bind:cancel="closeShowPicker" bind:confirm="confirmData" data-type="date"
+		showDialog="{{showDate}}"></picker>
 
 	<movable-area class="movable-area">
 		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
