--- a/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
+++ b/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
@@ -6,7 +6,7 @@
 		</view>
 	</nav-content>
 
-	<view class="bgColorWhite">
+	<view class="bgColorWhite" catchtouchmove='false'>
 		<view class="flex aic">
 			<l-input class="w90" bind:lininput="changeParams" value="{{keyword}}" placeholder="检验单号/订单号"
 				hide-label="{{true}}" />
