--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
@@ -6,7 +6,7 @@
 		</view>
 	</nav-content>
 
-	<view class="bgColorWhite">
+	<view class="bgColorWhite" catchtouchmove='false'>
 		<view class="flex aic">
 			<l-input class="w80" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
 			<view class="w20 color6 flex aic" bindtap="openPopup">
@@ -94,7 +94,7 @@
 			<view class="w33">
 				<view>原料数</view>
 				<view class="mt10 color03d0 bold">
-					{{additional.total_material_number || 0}} 吨或千米
+					{{additional.total_material_number || 0}} 吨|千米
 				</view>
 			</view>
 			<view class="w33">
