--- a/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplement.wxml
+++ b/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplement.wxml
@@ -6,7 +6,7 @@
 		</view>
 	</nav-content>
 
-	<view class="bgColorWhite">
+	<view class="bgColorWhite" catchtouchmove='false'>
 		<view class="flex aic">
 			<l-input class="w80" bind:lininput="changeParams" value="{{code}}" placeholder="补充单号/订单号" hide-label="{{true}}" />
 			<view class="w20 color6 flex aic" bindtap="openPopup">
@@ -78,7 +78,7 @@
 		<view class="flex jcsb" style="padding: 10px;">
 			<view class="w33">
 				<view>补充数</view>
-				<view class="mt10 color03d0 bold">{{additional.total_number || 0}} 吨或千米</view>
+				<view class="mt10 color03d0 bold">{{additional.total_number || 0}} 吨|千米</view>
 			</view>
 			<view class="w33">
 				<view>本厂承担</view>
