--- a/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrder.wxml
+++ b/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrder.wxml
@@ -6,7 +6,7 @@
 		</view>
 	</nav-content>
 
-	<view class="flex bgColorWhite aic">
+	<view class="flex bgColorWhite aic" catchtouchmove='false'>
 		<l-input class="w80" bind:lininput="changeParams" value="{{code}}" placeholder="运输单号/订单号" hide-label="{{true}}" />
 		<view class="w20 color6 flex aic" bindtap="openPopup">
 			<view>筛选</view>
