--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
@@ -124,7 +124,7 @@
 		<view wx:for="{{list}}" class="card flex" bindtap="toDetail" data-item="{{item}}">
 			<view class="w100 flex aic">
 				<view class="title w32">调取单号：</view>
-				<view>{{item.code}}</view>
+				<view class="w38">{{item.code}}</view>
 				<view class="ml30 colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px;"
 					wx:if="{{item.is_check === 0}}">待审核</view>
 				<view class="ml30 colorWhite bgColor27A2 pl10 pr10 pt5 pb5" style="border-radius: 500px;"
