--- a/pages/orderDetail/orderDetail.scss
+++ b/pages/orderDetail/orderDetail.scss
@@ -38,5 +38,29 @@
 	.van-popup {
     width: 90vw;
     padding: 10px;
+	}
+	
+	.ui-radio-index--icon-select {
+    color: #27a2fd;
+	}
+	
+	.checkbox-index--van-checkbox__icon--checked {
+    background-color: #27a2fd;
+    border-color: #27a2fd;
+	}
+
+	.card{
+		margin-top: 20px;
+	}
+
+	.noTopRightLeft{
+		border-top: 0px;
+		border-left: 0px;
+		border-right: 0px;
+	}
+
+	.van-popup {
+    width: 90vw;
+    padding: 10px;
   }
 }
